Added adminwelcome component
Added adminwelcom component

--- a/gladiatorFrontend/gladiatorAngular/src/app/contactus/contactus.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/contactus/contactus.component.html
@@ -1,7 +1,7 @@
 
     
         <h1>Contact Us</h1>
-        <form (ngSubmit)="processForm()">
+        <form (ngSubmit)="submitForm()">
             <div class="field">
                 <input type="text" name="name" class="input" placeholder="Your Name" [(ngModel)]="name">
             </div>
