--- a/gladiatorFrontend/gladiatorAngular/src/app/components/auction-request/auction-request.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/auction-request/auction-request.component.html
@@ -1,1 +1,34 @@
-<p>auction-request works!</p>
+
+
+     
+<form [formGroup]="requestForm" (ngSubmit)="onSubmit()">
+    
+    <div class="md-form mb-5">
+    Crop Type: <input formControlName="cropType"  placeholder="Enter Crop Type">
+    </div>  
+    <div class="md-form mb-5">
+    Crop Name: <input formControlName="cropName"  placeholder="Enter Crop Name">
+</div>
+
+<div class="md-form mb-5">
+    Fertilizer Type: <input formControlName="fertType"  placeholder="Enter Fertilizer Type">
+</div>
+<div class="md-form mb-5">
+    Quantity: <input formControlName="quantity"  placeholder="Enter Quantity">
+</div>
+<div class="md-form mb-5">
+    Base Price: <input formControlName="basePrice"  placeholder="Enter Base Price">
+</div>
+
+<div class="text-center mb-3 col-md-12">
+    <button type="submit">Place Request</button> 
+</div>
+
+<!--Grid row-->
+
+
+
+</form>
+
+
+
