--- a/gladiatorFrontend/gladiatorAngular/src/app/app.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/app.component.html
@@ -1,30 +1,15 @@
-<!-- <app-auction-request></app-auction-request>-->
-
-<nav class="navbar navbar-default" >
-    <div class="container">
-        <ul class="nav navbar-nav">
-            
-            <li ><a routerLink="/contactus">Contact us</a></li>
-            
-            <li> <a routerLink="/auction-request">auction request</a></li>
-            <li><a routerLink="/farmer-welcome">Welcome farmer</a></li> 
-            
-
-        </ul>
-
-    </div>
-</nav>
-<router-outlet></router-outlet>
-<!-- <mat-toolbar color="primary" class="navbar">
+<mat-toolbar color="primary" class="navbar">
   <div>
-      GladiatorPractice
+      FARMER PORTAL
   </div>
   <div>
     <span>
-      <a mat-button routerLink="/materialpractice" >MaterialPractice</a> 
-      <a mat-raised-button routerLink="/login" >Login</a> 
-      <a mar-raised-button routerLink="/register">Register</a>
+      <a mat-button routerLink="/home" >MaterialPractice</a> 
+      <a mat-button routerLink="src/app/about" >AboutUs</a> 
+      <a mat-button routerLink="/contact" >ContactUs</a> 
+      <a mat-raised-button routerLink="/subregister">Register</a>
     </span>
   </div>
-  </mat-toolbar> -->
-
+  </mat-toolbar>
+  
+<router-outlet></router-outlet>
