--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
@@ -1,7 +1,6 @@
 <div class="form">
     
-      <div class="list-header-title">Register
-      
+      <div class="list-header-title">Hello Farmer
       <form [formGroup]="registerForm" >
       <mat-form-field>
         <input id="FullName"
