LoginPage,and some routing paths given

--- a/gladiatorFrontend/gladiatorAngular/src/app/app.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/app.component.html
@@ -4,10 +4,10 @@
   </div>
   <div>
     <span>
-      <a mat-button routerLink="/home" >MaterialPractice</a> 
+      <a mat-button routerLink="/home" >Home</a> 
       <a mat-button routerLink="src/app/about" >AboutUs</a> 
-      <a mat-button routerLink="/contact" >ContactUs</a> 
-      <a mat-raised-button routerLink="/subregister">Register</a>
+      <a mat-button routerLink="src/app/contact" >ContactUs</a> 
+      <a mat-raised-button routerLink="/login">Login</a>
     </span>
   </div>
   </mat-toolbar>
