Reg pages designs updated

--- a/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-registration/bidder-registration.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-registration/bidder-registration.component.html
@@ -135,4 +135,6 @@
       </form>
   </div>
       <button mat-raised-button color="primary">Register</button>
+      <button mat-raised-button color="">Reset</button>
+      <a routerLink="/home"><button mat-raised-button color="warn">Back to Home</button></a>
 </div>
