--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
@@ -157,4 +157,6 @@
         </form>
     </div>
         <button mat-raised-button color="primary">Register</button>
+        <button mat-raised-button color="success">Reset</button>
+        <a routerLink="/home"><button mat-raised-button color="warn">Back to Home</button></a>
   </div>
