--- a/gladiatorFrontend/gladiatorAngular/src/app/app.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/app.component.html
@@ -5,8 +5,9 @@
   <div>
     <span>
       <a mat-button routerLink="/home" >MaterialPractice</a> 
-      <a mat-button routerLink="src/app/about" >AboutUs</a> 
-      <a mat-button routerLink="/contact" >ContactUs</a> 
+      <a mat-button routerLink="/aboutus" >About Us</a>
+      <a mat-button routerLink="/contactus" >Contact Us</a> 
+      <a mat-button routerLink="/farmer-welcome" >Welcome Farmer</a> 
       <a mat-raised-button routerLink="/subregister">Register</a>
     </span>
   </div>
