--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-welcome/farmer-welcome.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-welcome/farmer-welcome.component.html
@@ -1,9 +1,9 @@
-<p>farmer-welcome works!</p>
+
 <div class="container">
     
     <div class="btn-group">
-      <button type="button" class="btn btn-primary " (click)="goToAuction()">Place Aution Request</button>
-      <button type="button" class="btn btn-primary"(click)="goToSoldHistory()">Sold History</button>
-      <button type="button" class="btn btn-primary"(click)="goToMarketplace()">View Marketplace</button>
+      <button type="button" class="welcomebutton " color="primary" mat-raised-button (click)="goToAuction()">Place Aution Request</button>
+      <button type="button" class="welcomebutton" color="primary" mat-raised-button (click)="goToSoldHistory()">Sold History</button>
+      <button type="button" class="welcomebutton" color="primary" mat-raised-button (click)="goToMarketplace()">View Marketplace</button>
     </div>
   </div>
