--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
@@ -1,8 +1,14 @@
 <div class="form">
-    
-      <div class="list-header-title">Hello Farmer
+    <div class="bgpic">
+      <div class="container">
       <form [formGroup]="registerForm" >
-      <mat-form-field>
+        <span>
+          <label for="email" class="font-weight-bold">
+            PERSONAL DETAILS </label><br>
+        </span><br><br>
+        <label for="email" class="font-weight-bold">
+          Full Name: </label><br>
+      <mat-form-field>  
         <input id="FullName"
                matInput
                formControlName="FullName"
@@ -10,6 +16,8 @@
                placeholder="Enter your Full Name" />
       </mat-form-field>
       <br>
+      <label for="email" class="font-weight-bold">
+        Contact Number: </label><br>
       <mat-form-field>
         <input id="ContactNumber"
                matInput
@@ -17,6 +25,8 @@
                placeholder="Enter your Contact Number" />
       </mat-form-field>
       <br>
+      <label for="email" class="font-weight-bold">
+        Email ID : </label><br>
       <mat-form-field>
         <input id="EmailId"
                matInput
@@ -25,6 +35,12 @@
                placeholder="Enter your EmailId" />
       </mat-form-field>
       <br>
+      <span>
+        <label for="email" class="font-weight-bold">
+          ADDRESS DETAILS </label><br>
+      </span><br><br>
+      <label for="email" class="font-weight-bold">
+        Address Line1 : </label><br>
       <mat-form-field>
         <input id="AddressLine1"
                matInput
@@ -33,6 +49,8 @@
                placeholder="House.No/landmark" />
       </mat-form-field>
       <br>
+      <label for="email" class="font-weight-bold">
+        Address Line2 : </label><br>
       <mat-form-field>
         <input id="AddressLine2"
                matInput
@@ -41,6 +59,8 @@
                placeholder="Area/Village" />
       </mat-form-field>
       <br>
+      <label for="email" class="font-weight-bold">
+        City: </label><br>
       <mat-form-field>
         <input id="City"
                matInput
@@ -49,6 +69,8 @@
                placeholder="City" />
       </mat-form-field>
       <br>
+      <label for="email" class="font-weight-bold">
+        State : </label><br>
       <mat-form-field>
         <input id="State"
                matInput
@@ -57,14 +79,22 @@
                placeholder="State" />
       </mat-form-field>
       <br>
+      <label for="email" class="font-weight-bold">
+        Residence Pincode : </label><br>
       <mat-form-field>
         <input id="ResidencePincode"
                matInput
                formControlName="ResidencePincode"
                [(ngModel)]="user.ResidencePincode"
-               placeholder="ResidencePincode" />
+               placeholder="Please enter your Home Pincode" />
       </mat-form-field>
       <br>
+      <span>
+        <label for="email" class="font-weight-bold">
+          LAND DETAILS </label><br>
+      </span><br><br>
+      <label for="email" class="font-weight-bold">
+        Area: </label><br>
       <mat-form-field>
         <input id="Area"
                matInput
@@ -73,6 +103,8 @@
                placeholder="Land Area" />
       </mat-form-field>
       <br>
+      <label for="email" class="font-weight-bold">
+        Address: </label><br>
       <mat-form-field>
         <input id="Address"
                matInput
@@ -81,6 +113,8 @@
                placeholder="Land Address" />
       </mat-form-field>
       <br>
+      <label for="email" class="font-weight-bold">
+        Land Pincode : </label><br>
       <mat-form-field>
         <input id="LandPincode"
                matInput
@@ -89,6 +123,12 @@
                placeholder="Land Pincode" />
       </mat-form-field>
       <br>
+      <span>
+        <label for="email" class="font-weight-bold">
+          BANK DETAILS </label><br>
+      </span><br><br>
+      <label for="email" class="font-weight-bold">
+        Account Number : </label><br>
       <mat-form-field>
         <input id="AccountNo"
                matInput
@@ -97,6 +137,8 @@
                placeholder="Account No" />
       </mat-form-field>
       <br>
+      <label for="email" class="font-weight-bold">
+        IFSC: </label><br>
       <mat-form-field>
           <input id="IFSCcode"
                  matInput
@@ -105,6 +147,12 @@
                  placeholder="Enter your IFSCcode" />
         </mat-form-field>
         <br>
+        <span>
+          <label for="email" class="font-weight-bold">
+             DOCUMENT UPLOAD </label><br>
+        </span><br><br>
+        <label for="email" class="font-weight-bold">
+          Aadhar : </label><br>
         <mat-form-field>
             <input id="Aadhar"
                    matInput
@@ -113,6 +161,8 @@
                    placeholder="Please Upload Aadhar" />
           </mat-form-field>
           <br>
+          <label for="email" class="font-weight-bold">
+            PAN : </label><br>
           <mat-form-field>
             <input id="PAN"
                    matInput
@@ -121,6 +171,8 @@
                    placeholder="Please Upload PAN" />
           </mat-form-field>
           <br>
+          <label for="email" class="font-weight-bold">
+            Trader License : </label><br>
           <mat-form-field>
             <input id="TraderLicense"
                    matInput
@@ -128,7 +180,9 @@
                    [(ngModel)]="user.TraderLicense"
                    placeholder="Please Upload TraderLicense" />
           </mat-form-field>
-          <br>
+          <br><br><br>
+          <label for="email" class="font-weight-bold">
+            Password : </label><br>
       <mat-form-field>
           <input id="Password"
                  matInput
@@ -141,6 +195,8 @@
             </mat-icon>
         </mat-form-field>
         <br>
+        <label for="email" class="font-weight-bold">
+          Confirm Password : </label><br>
         <mat-form-field>
             <input id="ConfirmPassword"
                    matInput
@@ -155,8 +211,12 @@
           <br>
     
         </form>
-    </div>
+   
         <button mat-raised-button color="primary">Register</button>
-        <button mat-raised-button color="success">Reset</button>
+        &nbsp;&nbsp;
+        <button class="btn btn-outline-danger" type="reset"> Cancel</button>
+        &nbsp;&nbsp;
         <a routerLink="/home"><button mat-raised-button color="warn">Back to Home</button></a>
-  </div>
+      </div>
+      </div>
+    </div>
