--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.html
@@ -10,13 +10,15 @@
                 <h1 class="text-center login-title text-white font-weight-bold">LOGIN</h1>
                 <div class="account-wall">
                     <!-- ICON FOR LOGIN FORM -->
-                    <img class="profile-img" src="assets/images/user1.png" alt="User Icon">
-
+                    <!-- <div margin=""></div>
+                    <mat-icon>person</mat-icon> -->
+                    
+                
                     <form [formGroup]="loginForm" (ngSubmit)="verifyLogin()" class="form-signin">
                         <!-- email address -->
                         <div class="form-group">
                             <label for="email" class="font-weight-bold">
-                                CustomerID : </label>
+                                Email ID : </label>
                             <input type="text" class="form-control" placeholder="Email Id " formControlName="email" />
 <!-- 
                             <div *ngIf="submitted  &&  loginForm.controls.CustomerID.errors">
