--- a/gladiatorFrontend/gladiatorAngular/src/app/components/sub-register-page/sub-register-page.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/sub-register-page/sub-register-page.component.css
@@ -1,6 +1,7 @@
 .farmerbutton{
-    margin-left: 200px;
+    margin-left: 300px;
     margin-top:100px;
+    size:10px;
 }
 .bidderbutton{
     margin-left:500px;
