services and webapi

--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
@@ -212,7 +212,7 @@
     
         </form>
    
-        <button mat-raised-button color="primary">Register</button>
+        <button mat-raised-button color="primary" (click)="onSubmit(registerForm.value)" >Register</button>
         &nbsp;&nbsp;
         <button class="btn btn-outline-danger" type="reset"> Cancel</button>
         &nbsp;&nbsp;
