--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.css
@@ -1,9 +1,29 @@
-span{
+
+background{
+    background-color:white;
+    border:1px solid blue;
+    padding:7px;
+    width:100%;
+    text-align: center;
+    border-radius: 15px;
+    font-size:large;
+    background-image: url("src/assets/images/registrationBGI.jpg");
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+    background-position: center;
+}span{
     margin-left:100px;
 }
 .form{
     margin-top:50px;
     margin-left:500px;
+}
+.padding_textbox{
+    font-size: 0.8em;
+    font: bold;
+    /* border-radius: 15em; rounded corners */
+    padding: 0.7%;
+    height: 10%;
 }
 .form-signin
 {
@@ -81,13 +101,6 @@ span{
     margin-top: 10px;
 }
 
-
-.bgpic{
-    background-position: center;
-    background-image: url("/assets/images/online_banking_login.jpg");
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
-}
 #login {
 	width: 100px;
 	height: 100px;	
