--- a/gladiatorFrontend/gladiatorAngular/src/app/components/home/home.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/home/home.component.html
@@ -1,2 +1,44 @@
-<p>home works!</p>
-<h4>HELLO HOME</h4>
+<div class="homebgpic">
+    <div class="content">
+      <div class="title">
+        Welcome. Farmers and Bidders!
+      </div>
+      <div style="align-content: center">
+          <a routerLink='/about' style="color: inherit; text-decoration: none; display: block; height: 100%">
+            <div class="learnmore">
+              About us!
+            </div>
+          </a>
+      </div>
+      <div>
+      <div class="about-card">
+        <div>
+          <!-- <img src="../assets/fair.png"><br><br> -->
+          <p class="about-content">
+            <b style="color: black">Fair Bidding System</b><br><br>
+            Enroll in a fair bidding system and trade goods and crops with verified farmers.
+          </p>
+        </div>
+      </div>
+      <div class="about-card" style="background: rgb(239,239,239)">
+        <!-- <img src="../assets/trust.png"><br><br> -->
+        <p class="about-content">
+          <b style="color: black">Trusted Quality</b><br><br>
+          Rest assured. We always ensure the crops being traded on Mr. Farmer are always of the highest quality.
+        </p>
+      </div>
+      <div class="about-card">
+        <!-- <img src="../assets/peesa.png"><br><br> -->
+        <p class="about-content">
+          <b style="color: black">Timely payments</b><br><br>
+          Have faith. We care about our customers. Your money always be credited to you on time.
+        </p>
+      </div>
+    </div>
+    </div>
+  </div>
+  <!--<div style="height: 2000px; width: 100%; background-color: cadetblue">-->
+  
+  <!--</div>-->
+  
+  
