--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.html
@@ -7,7 +7,8 @@
         <!-- LOGIN FORM -->
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 container justify-content-center">
-                <h1 class="text-center login-title text-white font-weight-bold">LOGIN</h1>
+                <h1 class="text-center login-title text-white font-weight-bold"><p>Hello Admin!</p>
+                    Please Enter login details</h1>
                 <div class="account-wall">
                     <!-- ICON FOR LOGIN FORM -->
                     <!-- <div margin=""></div>
@@ -58,7 +59,7 @@
                             Go Home</a>
                         <br/>
                         <br/>
-                        Not Registerd?<a routerLink="/subregister"> Signup Here</a>
+                       
                         
                         <!-- <a routerLink="/forgotcustomerid" class="" routerLink="/forgotcustomerid">Forgot CustomerID</a> &nbsp; &nbsp;&nbsp;
                         <a class="" routerLink="/forgotcustomerpwd">Forgot Password</a> -->
@@ -80,4 +81,8 @@
             <br/>
         </div>
     </div>
+    <!-- <div>
+        <img [src]="myimage" style="height:1000px ;width:1500px" >
+    </div> -->
+   
 </div>
