--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login-farmer/login-farmer.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login-farmer/login-farmer.component.html
@@ -51,7 +51,7 @@
                             </div> -->
                         </div>
 
-                        <button class="btn btn-outline-success">Login</button>
+                        <button type="submit" class="btn btn-outline-success">Login</button>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
                         <button class="btn btn-outline-danger" type="reset"> Cancel</button>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
